--- a/layouts/partials/list.html
+++ b/layouts/partials/list.html
@@ -15,7 +15,7 @@
     {{ range .Paginator.Pages }}
     <li>
       <span class="date">{{ .Date | time.Format (.Site.Params.dateFormat | default "January 2, 2006" ) }}</span>
-      <a class="title" href="{{ .Params.externalLink | default .RelPermalink }}">{{ .Title }}</a>
+      <a {{ if .Params.externalLink }} target="_blank" {{ end }} class="title" href="{{ .Params.externalLink | default .RelPermalink }}">{{ .Title }}{{ if .Params.externalLink }} &#8599;{{ end }}</a>
     </li>
     {{ end }}
   </ul>
